--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -65,15 +65,5 @@
   border: 0;
   padding: 0;
   margin: 0;
+  outline: none;
 }
-
-// &__wrapper {
-//   @include content-wrapper-tablet;
-// }
-
-  // @media #{$tablet-width} {
-
-  //   &__wrapper {
-  //     @include content-wrapper-tablet;
-  //   }
-  // }
