--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -92,7 +92,7 @@
     padding: 20px 130px;
 
     box-sizing: border-box;
-    min-height: 110px;
+    height: 110px;
 
     display: flex;
     justify-content: space-between;
