--- a/sass/blocks/like-field.scss
+++ b/sass/blocks/like-field.scss
@@ -10,6 +10,7 @@
   color: $pages-text-color-pink;
   font-size: 0;
 
+
   &__label {
     margin-right: 3px;
     font-size: 12px;
@@ -23,9 +24,9 @@
     @include reset-button-style;
     box-sizing: border-box;
     width: 15px;
-    height: 13px;
-    background: url(../img/icon-heart.svg) no-repeat 50% 50%;
-    background-size: 14px 12px;
+    height: 100%;
+    background: url(../img/icon-heart.svg) no-repeat 50% 0;
+    background-size: 15px 13px;
     margin-right: 17px;
   }
 
