--- a/sass/blocks/versions-table.scss
+++ b/sass/blocks/versions-table.scss
@@ -78,13 +78,12 @@
     &::after {
       content: '';
       position: absolute;
-      width: 50px;
-      height: 50px;
-      top: 50%;
-      right: 8px;
-      transform: translateY(-50%);
+      width: 40px;
+      height: 40px;
+      top: 10px;
+      right: 13px;
       background: url(../img/icon-yes.svg) no-repeat 50% 50%;
-      background-size: 31px 21px;
+      background-size: 34px 24px;
     }
 
     &--no {
@@ -171,8 +170,9 @@
       }
 
       &::after {
+        top: 0;
         right: 50%;
-        transform: translate(50%, -50%);
+        transform: translate(50%, 0);
       }
     }
   }
@@ -210,6 +210,10 @@
       font-size: 18px;
       line-height: 30px;
       padding: 14px 22px 15px 22px;
+
+      &::after {
+        top: 12px;
+      }
     }
   }
 }
