--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -34,31 +34,14 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* vietnamese */
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
   font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightvietnamese.woff2") format('woff2');
-  unicode-range: U+0102-0103, U+1EA0-1EF1, U+20AB;
-}
+  font-family: "Open Sans";
+  font-style: normal;
 
-/* greek-ext */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightgreekext.woff2") format('woff2');
-  unicode-range: U+1F00-1FFF;
-}
-
-/* greek */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightgreek.woff2") format('woff2');
-  unicode-range: U+0370-03FF;
+  src: local('Open Sans Light'), local('OpenSans-Light'),url("../fonts/opensanslight.woff") format("woff"),
+  url("../fonts/opensanslight.eot") format("eot"),
+  url("../fonts/opensanslight.ttf") format("ttf");
 }
 
 @font-face {
