--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,47 +1,53 @@
-/* cyrillic */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightcyrillic.woff2") format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
+// /* cyrillic */
+// @font-face {
+//   font-family: 'Open Sans';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightcyrillic.woff2") format('woff2');
+//   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+// }
 
-/* cyrillic-ext */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightcyrillicext.woff2") format('woff2');
-  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-}
+// /* cyrillic-ext */
+// @font-face {
+//   font-family: 'Open Sans';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightcyrillicext.woff2") format('woff2');
+//   unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+// }
 
-/* latin-ext */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensanslightlatinext.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
+// /* latin-ext */
+// @font-face {
+//   font-family: 'Open Sans';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensanslightlatinext.woff2) format('woff2');
+//   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+// }
 
-/* latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightlatin.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
+// /* latin */
+// @font-face {
+//   font-family: 'Open Sans';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: local('Open Sans Light'), local('OpenSans-Light'), url("../fonts/opensanslightlatin.woff2") format('woff2');
+//   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+// }
 
+// @font-face {
+//   font-weight: 300;
+//   font-family: "Open Sans";
+//   font-style: normal;
+
+//   src: local('Open Sans Light'), local('OpenSans-Light'),url("../fonts/opensanslight.woff") format("woff"),
+//   url("../fonts/opensanslight.eot") format("eot"),
+//   url("../fonts/opensanslight.ttf") format("ttf");
+// }
 @font-face {
-  font-weight: 300;
   font-family: "Open Sans";
   font-style: normal;
-
-  src: local('Open Sans Light'), local('OpenSans-Light'),url("../fonts/opensanslight.woff") format("woff"),
-  url("../fonts/opensanslight.eot") format("eot"),
-  url("../fonts/opensanslight.ttf") format("ttf");
+  font-weight: 300;
+  src: url("../fonts/opensanslight.woff") format("woff"), url("../fonts/opensanslight.woff2") format("woff2");
 }
 
 @font-face {
