Правки по проекту

--- a/sass/blocks/features-list.scss
+++ b/sass/blocks/features-list.scss
@@ -118,6 +118,7 @@
       &:nth-of-type(2) {
         span {
           display: inline-block;
+          vertical-align: top;
         }
       }
 
