--- a/sass/blocks/popup.scss
+++ b/sass/blocks/popup.scss
@@ -96,6 +96,7 @@
         margin-bottom: 34px;
         span {
           display: inline-block;
+          vertical-align: top;
         }
       }
 
