--- a/sass/blocks/post-photo.scss
+++ b/sass/blocks/post-photo.scss
@@ -186,6 +186,7 @@
 
     &__filter-button-icon {
       display: inline-block;
+      vertical-align: baseline;
       fill: $pages-text-color-pink;
 
       &--crop {
