--- a/sass/blocks/versions-table.scss
+++ b/sass/blocks/versions-table.scss
@@ -162,6 +162,7 @@
       &--first {
         span:first-of-type {
           display: inline-block;
+          vertical-align: baseline;
         }
 
         &::after {
