--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -237,6 +237,7 @@
         .form__group-title {
           position: relative;
           display: inline-block;
+          vertical-align: top;
           background-color: white;
           margin: 0 auto;
           padding: 0 25px;
@@ -248,7 +249,7 @@
           display: block;
           text-align: center;
           position: absolute;
-          top: -18px;
+          top: -12px;
           left: 0;
           right: 0;
           background-color: white;
@@ -257,7 +258,7 @@
             content: '';
             display: block;
             position: relative;
-            top: -16px;
+            top: -22px;
             height: 2px;
             background-color: $pages-color-dark-gray;
             z-index: 0;
@@ -346,6 +347,7 @@
 
           span:last-of-type {
             display: inline-block;
+            vertical-align: top;
           }
 
           &::after {
@@ -419,6 +421,7 @@
     &__hint {
       span:last-of-type {
         display: inline-block;
+        vertical-align: top;
       }
     }
 
@@ -494,12 +497,21 @@
           padding: 50px 0 7px 58px;
         }
 
+        .form__entry-field:nth-child(3n+2) {
+          padding-left: 10px;
+        }
+
+        .form__entry-field:nth-child(n+7) {
+          order: 7;
+        }
+
         .form__entry-field:nth-child(1) {
           order: 1;
         }
 
         .form__entry-field:nth-child(2) {
-          order: 4;
+          order:5;
+          padding-left: 0;
         }
 
         .form__entry-field:nth-child(3) {
@@ -514,6 +526,7 @@
 
         .form__entry-field:nth-child(5) {
           order: 3;
+          padding-left: 0;
         }
 
         .form__entry-field:nth-child(6) {
