--- a/sass/blocks/photo-post.scss
+++ b/sass/blocks/photo-post.scss
@@ -150,7 +150,7 @@
       }
 
       .photo-post__content {
-        height: auto;
+        min-height: 95px;
         padding-right: 31px;
       }
 
