--- a/sass/blocks/photo-post.scss
+++ b/sass/blocks/photo-post.scss
@@ -63,9 +63,9 @@
       top: 0;
       display: block;
       box-sizing: border-box;
-      min-width: 140px;
+      width: 140px;
       min-height: 36px;
-      padding: 6px;
+      padding: 6px 15px;
       text-align: center;
       background-color: $pages-text-color-pink;
       color: #fff;
@@ -73,6 +73,8 @@
       line-height: 24px;
       text-transform: uppercase;
       font-weight: 700;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
@@ -118,11 +120,13 @@
       .photo-post__title {
         width: 200px;
         order: 1;
+        min-width: 70%;
       }
 
       .photo-post__post-text {
         order: 3;
         margin-top: -4px;
+        min-width: 100%;
       }
 
       .photo-post__content {
